change body height from vh to % to fill up all remaining space and prevent page from getting stuck in viewport when scrolling

--- a/style.css
+++ b/style.css
@@ -50,14 +50,14 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
 }
 
 html {
-    overflow-x: hidden;
+    overflow-x: hidden
 }
 
 .first_row-box {
